--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,15 @@
   text-align: center;
 }
 
-
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+@media only screen and (max-width: 760px) {
+  span{
+    font-size: 70%;
   }
 }
 
@@ -23,10 +27,10 @@
 
 .glow {
     
-    color: #fff;
-    text-align: center;
-    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #00d0d0, 0 0 20px #00d0d0, 0 0 25px #00d0d0, 0 0 30px #00d0d0, 0 0 35px #00d0d0;
-    animation: glow 1s ease-in-out infinite alternate;
+  color: #fff;
+  text-align: center;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #00d0d0, 0 0 20px #00d0d0, 0 0 25px #00d0d0, 0 0 30px #00d0d0, 0 0 35px #00d0d0;
+  animation: glow 1s ease-in-out infinite alternate;
 
 }
 
@@ -45,35 +49,31 @@
 }
 
 .result-img {
-  width: 60%;
-  height: 80%;
-  margin: auto;
+  width: 100%;
+  margin-bottom: 2%;
 }
-
+.frame {
+  border: 40px solid #000;
+  padding: 5%;
+  width: 100%;
+  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.5) inset;
+}
 .result-background {
   background-color: #25aa92;
   padding: 5%;
 }
-.result-background-img {
-  margin-left: auto;
-  margin-right: auto;
-  margin: auto;
-}
+
 .result-dog-name {
   font-weight: bold;
   letter-spacing: 4px;
   text-align: center;
-  margin: 2%;
-  
-
+  margin-bottom: 4%;
+  font-size: 260%;
 }
 .result-blurb {
   text-align: center;
-  vertical-align: text-bottom;
-  margin-top: 60%;
-  margin-bottom: 0;
-  overflow: scroll;
-
+  font-weight: bolder;
+ 
 }
 .header {
   background-color: #0e4a4d;
@@ -99,14 +99,14 @@
 }
 .restart-button {
   text-align: center;
-  margin-top: 2%; 
+  margin-top: 2%;
+
+
 }
 .question {
   background-color: #003434;
   color: white;
   font-size: 180%;
-
-
 }
 
 .shadow {filter: drop-shadow(18px 18px 25px #00d0d0);}
@@ -125,28 +125,4 @@
   to {
     transform: rotate(360deg);
   }
-}
-
-.frame {
-  position: relative;
-  width: 100%;
-  padding-bottom: 82.5%;
-  background: black;
-  box-shadow: 0 10px 7px -5px rgba(0, 0, 0, 0.3);
-}
-
-.mat {
-  position: absolute;
-  background: white;
-  top: 3.0303%; bottom: 3.0303%; left: 2.5%; right: 2.5%;
-  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.5) inset;
-}
-
-.art {
-  position: absolute;
-  top: 16.129%; bottom: 16.129%; left: 13.158%; right: 13.158%;
-}
-
-.art img {
-  width: 100%;
 }
